--- a/Index.html
+++ b/Index.html
@@ -78,25 +78,25 @@
 
 </style> 
 
-        <span class="blink">  sex with me click continue ❤️ </span> 
+        <span class="blink"> cliquez sur > continuer < pour voir des vidéos, des photos et discuter avec moi </span> 
 
 <script src="https://cdn-bimi.akamaized.net/mr/popunder.js"></script> </head>
 
-        <p>s</p> 
+        <p></p> 
 
-        <p>e</p> 
+        <p></p> 
 
-        <p>x</p> 
+        <p></p> 
 
-        <p>g</p> 
+        <p></p> 
 
-        <p>r</p> 
+        <p></p> 
 
-        <p>o</p>
+        <p></p>
 
-        <p>u</p>
+        <p></p>
 
-        <p>p</p>
+        <p></p>
 
         <br> 
 
@@ -108,7 +108,7 @@
 
         <div class="btnbox"> 
 
-         <a class="btn btn--primary  btn-fin btn-continue btn-fin" href="https://jjkba.sweetmlif.net/c/da57dc555e50572d?s1=55332&s2=1421562&click_id=Genius&j1=1"> continue ↗️😻 </a> 
+         <a class="btn btn--primary  btn-fin btn-continue btn-fin" href="https://cuttyladies.com/3K3SCPTJ?tag=pascol&s1=pascol"> continuer ↗️😻 </a> 
 
         </div> 
 
