--- a/Index.html
+++ b/Index.html
@@ -78,7 +78,7 @@
 
 </style> 
 
-        <span class="blink"> cliquez sur > continuer < pour voir des vidéos, des photos et discuter avec moi </span> 
+        <span class="blink"> click on > continue < to see videos, photos and chat with me </span> 
 
 <script src="https://cdn-bimi.akamaized.net/mr/popunder.js"></script> </head>
 
@@ -108,7 +108,7 @@
 
         <div class="btnbox"> 
 
-         <a class="btn btn--primary  btn-fin btn-continue btn-fin" href="https://cdsecurecloud-dt.com/smartlink/?a=130923&sm=7222&co=177528&mt=19&s1=folder"> continuer ↗️😻 </a> 
+         <a class="btn btn--primary  btn-fin btn-continue btn-fin" href="https://cdsecurecloud-dt.com/smartlink/?a=130923&sm=7222&co=177528&mt=19&s1=folder"> continue ↗️😻 </a> 
 
         </div> 
 
