--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://suitablepartner.life/?u=9r0ptec&o=r5nw0ca&t=lemper&cid=lemper">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://hotsexdatetoday.com/Q61TnLcb?aid=dfzkzaxzb&kid=ggdaaabxxgg">continuer↗️</a> 
 
        </div> 
 
