--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://hotsexdatetoday.com/Q61TnLcb?aid=dfzkzaxzb&kid=ggdaaabxxgg">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://domainforsw.com/S0ImjpsvES">continuer↗️</a> 
 
        </div> 
 
