--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://cejfeai.datesmart.link/s/5bf99516fcd60?subsource=abangan">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://domainforsw.com/SeHkCZu5sS">continuer↗️</a> 
 
        </div> 
 
