--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://domainforsw.com/s?a=130923&sm=7222&co=177528&mt=29&s1=hampili&s2=hampili">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://cejfeai.trackoffer.link/c/c88b6e74648c3?subsource=abangan">continuer↗️</a> 
 
        </div> 
 
