--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://cejfeai.trackoffer.link/c/c88b6e74648c3?subsource=abangan">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg">continuer↗️</a> 
 
        </div> 
 
