--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://secretsafedomain.com/s?a=130923&sm=7222&co=177528&mt=27&s1=goblok&s2=goblok">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg">continuer↗️</a> 
 
        </div> 
 
