--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
       <div class="flashy"> 
 
-       <p> Voudriez-vous voir ma vidéo de masturbation en direct !!!
-, et des services sexuels de ma part ,Si oui, cliquez sur Continuer et suivez les étapes </p>
+       <p> sex services ❤️ </p>
+       <p> masturbation video ❤️</p>
+       <p> nude videos ❤️ </p>
+       
 
       </div> 
 
@@ -75,7 +77,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg">continuer↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg">click here ↗️</a> 
 
        </div> 
 
