--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
       <div class="flashy"> 
 
-       <h1>ATTENTION</h1> 
+       <h1>❤️ sex with me ❤️</h1> 
 
       </div> 
 
