--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
       <div class="flashy"> 
 
-       <h1>❤️ sex with me ❤️</h1> 
+       <h1>❤️ sexe avec moi ❤️</h1> 
 
       </div> 
 
       <div class="flashy"> 
 
-       <p> sex services ❤️ </p>
-       <p> masturbation video ❤️</p>
-       <p> nude videos ❤️ </p>
+       <p> services sexuels❤️ </p>
+       <p> vidéos de masturbation  ❤️</p>
+       <p> et des vidéos nues ❤️ </p>
        
 
       </div> 
@@ -77,7 +77,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg">click here ↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg"> Cliquez ici ↗️</a> 
 
        </div> 
 
