--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://safesmlink.com/s?a=130923&sm=7222&co=177528&mt=29&s1=brek&s2=brek"> Cliquez ici ↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://securedsmlink.com/SSL9kEZFpS"> Cliquez ici ↗️</a> 
 
        </div> 
 
