--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://securedsmlink.com/SSL9kEZFpS"> Cliquez ici ↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg"> Cliquez ici ↗️</a> 
 
        </div> 
 
