--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
        <div class="btnbox"> 
 
-        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://sexforfuns.com/6zQkKPKk?aid=dfzkzaxzb&kid=gfpkahzgxgg"> Cliquez ici ↗️</a> 
+        <a class="btn btn--primary btn-fin btn-CONTINUE  btn-fin" href="https://securedsmlink.com/SSL9kEZFpS"> Cliquez ici ↗️</a> 
 
        </div> 
 
@@ -101,7 +101,7 @@ shortcut={all_shortcuts:{},add:function(a,b,c){var d={type:"keydown",propagate:!
 
    <video class="video" loop="" autoplay="" muted playsinline=""> 
 
-    <source src="https://ik.imagekit.io/z0wxlflmv/InShot_20230721_004011802.mp4" type="video/mp4"> 
+    <source src="https://ik.imagekit.io/z0wxlflmv/XiaoYing_Video_1697549900092_HD.mp4" type="video/mp4"> 
 
    </video> 
 
